[package]
name = "hello-workers-rs"
version = "0.1.0"
edition = "2021"
authors = ["rcxid <gc6174@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = "1.0.219"
serde_json = "1.0.141"
