[package]
name = "hello-workers-rs"
version = "0.1.0"
edition = "2021"
authors = ["rcxid <gc6174@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.6", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
serde = "1.0.219"
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.19", features = ["time", "json", "chrono"] }
